--- a/src/components/SearchResultsView.css
+++ b/src/components/SearchResultsView.css
@@ -23,6 +23,10 @@
   margin-top: 70px;
 }
 
+.unselected {
+
+}
+
 .search-results-component .sidebar .sorting-options a {
   font-size: 16px;
   font-weight: 400;
