--- a/src/components/MapVisualization.css
+++ b/src/components/MapVisualization.css
@@ -1,9 +1,24 @@
+@media (max-width: 959px) {
+  .map-component {
+    display: none;
+  }
+}
+
+/*.map-component .leaflet-control-container {
+  width: 1600px;
+  overflow: hidden;
+  margin: 0 auto;
+  position: relative;
+  height: 300px;
+}*/
+
 .map-component .map-information {
+  /*display: none;*/
   border-bottom: 2px solid #ff6f00;
 }
 
 .map-component .map-information .info-container {
-  width: 100%;
+  width: 1536px;
   margin: 0 auto;
   height: 96px;
   /*overflow: hidden;*/
@@ -12,11 +27,12 @@
 .map-component .map-information .info-container .legend {
   padding-top: 36px;
   height: 60px;
+  float: left;
 }
 
 .map-component .map-information .info-container .legend .marker {
   float: left;
-  font-size: smaller;
+  /*font-size: smaller;*/
 }
 
 .map-component .map-information .info-container .legend .marker img {
@@ -36,7 +52,10 @@
 }
 
 .map-component .map-information .info-container .details {
-  font-size: smaller;
+  /*font-size: smaller;*/
+
+ float: left;
+  width: 1216px;
 }
 
 .map-component .map-information .info-container .details .col {
@@ -68,6 +87,7 @@
   width: 31px;
   float: left;
   padding-top: 40px;
+  margin-left: 88px;
 }
 
 .map-component .map-information .info-container .details .arrow-col img {
