--- a/src/components/SearchHit.css
+++ b/src/components/SearchHit.css
@@ -2,15 +2,47 @@
 .result {
   width: 288px;
   margin-right: 32px;
-  padding-right: 32px;
   float: left;
   margin-bottom: 32px;
   height: 300px;
 }
 
-.result:nth-child(4n) {
-  margin-right: 0;
+@media (min-width: 1600px) {
+  .result:nth-child(4n) {
+    margin-right: 0;
+  }
 }
+
+@media (max-width: 1599px) and (min-width: 1280px) {
+  .result:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 1279px) and (min-width: 960px) {
+  .result:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 959px) and (min-width: 640px) {
+  .result:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 639px) {
+  .result {
+    margin-right: 0;
+    margin-bottom: 16px;
+  }
+}
+
+/*@media (max-width: 959px) {
+  .result {
+    margin-right: 0;
+  }
+}*/
 
 .thumbnail {
   width: 288px;
@@ -23,11 +55,16 @@
 }
 
 .result-title {
+}
+
+.result-title-text {
   color: #3f51b2;
   font-size: 20px;
   line-height: 26px;
   font-weight: 500;
   margin-bottom: 6px;
+  max-height: 78px;
+  overflow: hidden;
 }
 
 .result-author {
