fix some build stuff, and use l10n strings for sorting methods

--- a/src/components/SearchResultsView.css
+++ b/src/components/SearchResultsView.css
@@ -58,6 +58,7 @@
   display: block;
   line-height: 26px;
   transition: 100ms ease-in-out color;
+  text-transform: capitalize;
 }
 
 .search-results-component .sidebar .sorting-options a.selected,
