--- a/src/components/MapVisualization.css
+++ b/src/components/MapVisualization.css
@@ -4,16 +4,8 @@
   }
 }
 
-/*.map-component .leaflet-control-container {
-  width: 1600px;
-  overflow: hidden;
-  margin: 0 auto;
-  position: relative;
-  height: 300px;
-}*/
-
 .map-component .map-information {
-  /*display: none;*/
+  display: none;
   border-bottom: 2px solid #ff6f00;
 }
 
@@ -21,7 +13,6 @@
   width: 1536px;
   margin: 0 auto;
   height: 96px;
-  /*overflow: hidden;*/
 }
 
 .map-component .map-information .info-container .legend {
@@ -32,7 +23,6 @@
 
 .map-component .map-information .info-container .legend .marker {
   float: left;
-  /*font-size: smaller;*/
 }
 
 .map-component .map-information .info-container .legend .marker img {
@@ -52,9 +42,7 @@
 }
 
 .map-component .map-information .info-container .details {
-  /*font-size: smaller;*/
-
- float: left;
+  float: left;
   width: 1216px;
 }
 
