--- a/src/containers/Case.sass
+++ b/src/containers/Case.sass
@@ -1,4 +1,5 @@
 @import '../UniversalStyles'
+@import '../../node_modules/quill/dist/quill.snow.css'
 
 .detailed-case-component
   width: 1600px
@@ -236,6 +237,7 @@
   min-height: 200px
 
 .edit-button-container
+  z-index: 3000
   position: fixed
   bottom: 0
   width: 100%
