--- a/src/About.scss
+++ b/src/About.scss
@@ -51,7 +51,7 @@
       margin-top: 12px;
     }
 
-    & > a {
+    & > .people {
       color: $color2;
       font-size: 18px;
       line-height: 24px;
@@ -72,6 +72,10 @@
           margin-top: 8px;
         }
       }
+    }
+    a {
+      color: $color2;
+      font-weight: 400;
     }
   }
 
@@ -135,5 +139,34 @@
         }
       }
     }
+  }
+}
+
+img.article-image {
+  width: 100%;
+  margin-top: 24px;
+  @media (max-width: 639px) {
+    width: 100%;
+    margin-top: 16px;
+  }
+}
+
+.more-orange {
+  .tab, .tab-open {
+    padding-top: 24px;
+    .title {
+      color: #ff6f00;
+      font-weight: 500;
+      padding: 24px 16px;
+      font-size: 28px;
+    }
+    &:after {
+      left: auto;
+      right: 16px;
+      top: 36px;
+    }
+  }
+  .tab-open {
+    padding: 24px 16px;
   }
 }
