--- a/src/components/SearchQueryField.scss
+++ b/src/components/SearchQueryField.scss
@@ -10,9 +10,21 @@
   font-weight: 100;
   padding-left: 36px;
 
+  background-image: url(/img/pp-search-icon.png);
+  background-repeat: no-repeat;
+  background-size: 16px;
+  background-position: 12px 12px;
+
+  &:focus {
+    background-color: #fff;
+    color: #333;
+    background-image: url(/img/pp-search-icon-dark.png);
+  }
+
   @media (max-width: 959px) {
     box-sizing: border-box;
   }
+
 }
 
 .search-bar::-webkit-input-placeholder {
