working on Teaching refactoring

--- a/src/components/SubAccordionTab.css
+++ b/src/components/SubAccordionTab.css
@@ -1,4 +1,5 @@
 .tab {
+  border-bottom: 1px solid #ccc;
   padding: 16px;
   padding-right: 96px;
   position: relative; }
@@ -45,7 +46,54 @@
   .tab div:nth-child(2) {
     display: none; }
 
+.subtab {
+  border-bottom: 1px solid #ccc;
+  padding: 16px;
+  padding-right: 96px;
+  position: relative; }
+  @media (max-width: 639px) {
+    .subtab {
+      padding: 12px;
+      padding-right: 0; } }
+  .subtab .title {
+    color: #666;
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 400;
+    display: block;
+    margin-top: 8px;
+    cursor: pointer;
+    width: 100%;
+    padding: 16px;
+    margin: -16px;
+    padding-left: 32px; }
+    @media (max-width: 639px) {
+      .subtab .title {
+        font-size: 13.5px;
+        line-height: 16.5px;
+        padding: 12px;
+        margin: -12px;
+        padding-left: 24px; } }
+  .subtab:after {
+    content: "";
+    background-image: url("../img/pp-map-arrow-icon-grey-down.png");
+    background-repeat: no-repeat;
+    width: 18px;
+    height: 9px;
+    display: block;
+    background-size: contain;
+    opacity: 0.5;
+    position: absolute;
+    top: 20px;
+    left: 0; }
+    @media (max-width: 639px) {
+      .subtab:after {
+        width: 16px;
+        height: 8px;
+        top: 15px; } }
+
 .tab-open {
+  border-bottom: 1px solid #ccc;
   padding: 16px;
   padding-right: 96px;
   position: relative; }
