--- a/src/components/AccordionTeaching.css
+++ b/src/components/AccordionTeaching.css
@@ -1,3 +1,4 @@
+@import "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.4/css/bootstrap.min.css";
 .tab {
   border-bottom: 1px solid #ccc;
   padding: 16px;
