conflicts between material-ui pencil and bootstrap4

--- a/src/containers/Case/Case.scss
+++ b/src/containers/Case/Case.scss
@@ -1,4 +1,4 @@
-@import "../UniversalStyles";
+@import "../../UniversalStyles";
 // @import "quill/dist/quill.snow.css";
 
 .detailed-case-component {
