--- a/src/components/SearchHitCategory/SearchHitCategory.scss
+++ b/src/components/SearchHitCategory/SearchHitCategory.scss
@@ -9,7 +9,7 @@
   line-height: 30px;
   padding: 20px 0 14px;
   // border-bottom: 2px solid #eee;
-  border-top: 2px solid #eee;
+  // border-top: 2px solid #eee;
 }
 
 .results {
