--- a/src/components/EditProfile.scss
+++ b/src/components/EditProfile.scss
@@ -6,89 +6,50 @@
   color: black;
 }
 
-.profile-info-section {
-  width: 1600px;
-  margin: 0 auto;
-  overflow: hidden;
-  padding-bottom: 0;
-  padding-top: 32px;
+.profile {
+  padding-top: 7%;
+  padding-bottom: 7%;
+}
 
-  @media (max-width: 1599px) {
-    width: 1280px;
+.org-submit {
+  width: 100%;
+  span {
+    text-transform: none !important;
   }
+}
 
-  @media (max-width: 1279px) {
-    width: 960px;
-  }
-
-  @media (max-width: 959px) {
-    width: 640px;
-  }
-
+.org-field {
+  padding-top: 14px;
   @media (max-width: 639px) {
-    width: 320px;
+    padding-bottom: 28px;
+  }  
+  .col-md-7 {
+    >div {
+      width: 100% !important;
+      margin-bottom: 14px;
+      margin-top: -14px !important;
+      .auto-org {
+        width: 100% !important;
+        label {
+          padding-left: 16px;
+        }
+      }
+    }
   }
-
-  .sidebar {
-    padding: 0 32px;
-    width: 200px;
-    float: left;
-  }
-}
-
-@media (max-width: 1279px) {
-  .profile-info-section .sidebar {
-    // padding: 0 16px;
-    // width: 928px;
-  }
-}
-
-@media (max-width: 959px) {
-  .profile-info-section .sidebar {
-    width: 608px;
-    padding-left: 0;
-  }
-}
-
-@media (max-width: 639px) {
-  .profile-info-section .sidebar {
-    width: 288px;
-    padding: 0 16px;
+  .col-md-5 {
+    .org-submit, .help-button {
+      float: left;
+    }
+    .org-submit {
+      width: 80%;
+    }
+    padding-top: 14px;
   }
 }
 
-.profile-info-section .main-area {
-  padding-right: 32px;
-  width: 1248px;
-  float: right;
-}
-
-@media (max-width: 1599px) {
-  .profile-info-section .main-area {
-    width: 928px;
+  .auto-org {
+    font-size: 20px !important;
   }
-}
-
-@media (max-width: 1279px) {
-  .profile-info-section .main-area {
-    width: 638px;
-    // padding-right: 16px;
-    // padding-left: 16px;
-  }
-}
-
-@media (max-width: 959px) {
-  .profile-info-section .main-area {
-    width: 608px;
-  }
-}
-
-@media (max-width: 639px) {
-  .profile-info-section .main-area {
-    width: 288px;
-    padding: 0 16px;
-  }
-}
 
 .sidebar {
   .user-avatar {
@@ -135,19 +96,20 @@
   }
 }
 
-.profile-info-section .main-area {
+.profile .main-area {
   .form-label {
     color: #666;
     font-size: 36px;
     font-weight: 400;
     line-height: 48px;
     margin-bottom: 24px;
-    padding-left: 32px;
     display: block;
     @media (max-width: 639px) {
-      padding-left: 0;
       font-size: 24px;
       line-height: 32px;
+    }
+    &.organization {
+      padding-top: 28px;
     }
   }
   .name-input {
@@ -180,10 +142,6 @@
     color: #333;
     font-weight: 100;
     line-height: 26px;
-    padding: 0 32px;
-    @media (max-width: 639px) {
-      padding: 0;
-    }
   }
   .org-section {
     padding: 32px;
@@ -206,68 +164,44 @@
 
 
   }
-  .org-input,  {
+  .org-input {
     font-size: 20px;
     font-weight: 300;
     padding: 12px 16px;
+    box-sizing: border-box;
     display: block;
     border: 2px solid #eee;
     margin-bottom: 16px;
     width: 400px;
     @media (max-width: 639px) {
       width: 100%;
-      box-sizing: border-box;
     }
   }
 
-  .org-input.geosuggest {
-    padding: 0;
-  }
-  .quick-submit-section {
-    overflow: hidden;
-    .org-input {
-      float: left;
-    }
-    .quick-submit-button {
+  .help-button {
+    width: 20%;
+    a {
       display: block;
-      float: left;
-      width: 240px;
-      text-align: center;
-      padding: 15px;
-      background-color: #3f51b2;
-      color: #fff;
-      border-radius: 4px;
-      margin-left: 16px;
-      font-size: 20px;
-      font-weight: 400;
-      @media (max-width: 1279px) {
-        width: 406px;
-        margin-left: 0;
-        margin-bottom: 16px;
-      }
-      @media (max-width: 639px) {
-        width: 190px;
-      }
-    }
-    .help-button {
-      display: block;
+      margin: 0 auto;
+      position: relative;
       border: 4px solid #ddd;
       color: #ddd;
-      float: left;
-      font-size: 40px;
-      width: 48px;
-      height: 48px;
+      width: 2.4em;
+      height: 2.4em;
       text-align: center;
-      border-radius: 24px;
+      border-radius: 50%;
       box-sizing: border-box;
-      padding-top: 4px;
-      margin-left: 16px;
+      .question {
+        position: absolute;
+        font-size: 1.7rem;
+        left: 25%;
+        top: -3px;
+      }
     }
   }
   .biography-input {
     display: block;
     border: 2px solid #eee;
-    margin: 0px 32px 64px;
     font-weight: 300;
     padding: 16px;
     width: 100%;
@@ -275,15 +209,7 @@
     height: 240px;
     line-height: 28px;
     font-size: 20px;
-    @media (max-width: 639px) {
-      margin: 0;
-      margin-bottom: 64px;
-    }
   }
-
-
-
-
 
   .name {
     color: #3f51b2;
@@ -337,52 +263,3 @@
     }
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
