- Refactor quick submit code to allow for routing - Connect with the actions to fetch case & method headlines to allow linked cases etc. autocomplete

--- a/src/components/QuickSubmit.scss
+++ b/src/components/QuickSubmit.scss
@@ -1,6 +1,6 @@
 @import "../UniversalStyles";
 
-form.quick-submit {
+.quick-submit {
   padding-top: 7%;
   padding-bottom: 7%;
   label {
@@ -20,20 +20,5 @@ form.quick-submit {
   h2 {
     color: $color1;
     text-align: center;
-  }
-}
-
-.select-type {
-  padding-top: 7%;
-  padding-bottom: 7%;
-  text-align: center;
-  .col-xs-10 {
-    padding-top: 3%;
-  }
-	p {
-    padding: 14px 0;
-    text-align: center;
-    background: $color2;
-    color: white;
   }
 }
