fixed EditProfile styling and avatar circle

--- a/src/UniversalStyles.scss
+++ b/src/UniversalStyles.scss
@@ -1,4 +1,4 @@
-@import 'https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.4/css/bootstrap.min.css';
+@import '../node_modules/bootstrap/scss/bootstrap';
 $color1: #3f51b2;
 $color2: #ff6f00;
 
