--- a/src/components/QuickSubmit.scss
+++ b/src/components/QuickSubmit.scss
@@ -3,9 +3,23 @@
 .quick-submit {
   padding-top: 7%;
   padding-bottom: 7%;
+  p {
+    margin: 0;
+  }
   label {
     display: block;
     font-size: 1.2rem;
+  }
+  @include media-breakpoint-between(lg, xl) {
+    .col-sm-11 {
+      padding-top: 1rem;
+    }
+    .form-title {
+      text-align: left;
+    }
+  }
+  .vidField, .locationField {
+    padding-top: 3%;
   }
   .dismiss {
     position: absolute;
@@ -20,5 +34,7 @@
   h2 {
     color: $color1;
     text-align: center;
+    margin-bottom: 3rem;
   }
 }
+
