--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -1,5 +1,11 @@
 @import "./UniversalStyles";
 
+.hide {
+  img {
+    display: none;
+  }
+}
+
 .main-contents {
   min-height: 200px;
 }
@@ -24,6 +30,8 @@
     overflow: hidden;
     .change-avatar-button {
       background-color: rgba(0, 0, 0, 0.5);
+      border: solid 2px red;
+      height: 40px;
       position: absolute;
       bottom: 0;
       left: 0;
